Ember Quiz Stats - fix chart sections placement
On smaller screens, the question statistics were acting too big and so
the last section always dropped down below the other ones. This patch
makes the initial section width just a tad smaller to make more room for
friends.

Closes CNVS-13230

TEST PLAN
---- ----

  - use a 13" or smaller laptop (not sure if changing resolution works,
    i tried on 4 different resolutions/monitors, only laptop one did
    this)
  - go to ember quiz stats for a quiz with some questions
  - verify that the discrimination index and essay/formula/fileupload
    charts are on the same line as the rest

Reviewed-on: https://gerrit.instructure.com/35429
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Caleb Guanzon <cguanzon@instructure.com>
Product-Review: Ahmad Amireh <ahmad@instructure.com>

--- a/app/stylesheets/ember_quizzes/statistics.scss
+++ b/app/stylesheets/ember_quizzes/statistics.scss
@@ -63,7 +63,7 @@ $muteTextColor: #949494;
   section {
     display: inline-block;
     vertical-align: top;
-    width: 320px;
+    width: 310px;
   }
 
   .question-attempts {
